# SpacePINN

./: .gitignore  LICENSE  PHYSICAL_CONVENTIONS.md  README.md  pyproject.toml
data/: README.md
data/runs/: README.md
examples/: inspect_paper_record.py  load_paper_timeseries.py  rerender_static_sweep.py
src/spacepinn/: optimizer.py  pinn.py  plotter.py  result.py
src/spacepinn/config/: config_2d.py  (+6 more)
tests/: conftest.py  test_paper_imports.py
tests/experiments/: test_circular_orbit_transfer_goddard_no_alpha.py  test_opengoddard_solve_banner.py  test_paper_baseline_capture.py  test_paper_boundary_weight_sweep.py  test_paper_descent_landing_2d.py  test_paper_descent_landing_2d_monte_carlo.py  test_paper_hohnmann_transfer.py  test_paper_hohnmann_transfer_monte_carlo.py  test_paper_kinematic_sanity_check_3d.py  test_paper_low_thrust_boundary_sweep.py  test_paper_low_thrust_transfer.py  test_paper_low_thrust_transfer_monte_carlo.py  test_paper_rendezvous_hold_point_eci.py  test_paper_rendezvous_hold_point_eci_goddard.py  test_paper_rendezvous_hold_point_eci_monte_carlo.py  test_paper_swingby_2d.py  test_paper_swingby_2d_monte_carlo.py  test_paper_swingby_3d.py  test_paper_swingby_3d_monte_carlo.py  test_paper_swingby_boundary_condition_variants_3d.py  test_paper_swingby_soft_bc_weight_search.py  test_paper_swingby_time_of_flight_variants_3d.py
tests/optimization/: test_engine_convergence.py
tests/physics/: test_core_physics.py  test_saved_run_physics.py
tests/plotting/: test_style_resolution.py
tests/runner/: test_collection_plotting_passthrough.py
(+6106 files in other folders)
