[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacepinn"
version = "0.1.0"
description = "Curated paper release for spacecraft trajectory optimization with physics-informed neural networks"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Samuel Schönherr" }
]
keywords = [
  "physics-informed neural networks",
  "trajectory optimization",
  "orbital mechanics",
  "optimal control",
  "spacecraft dynamics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "matplotlib",
  "torch",
  "tqdm",
  "OpenGoddard"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "scipy",
]

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
where = ["src"]
